# beomnitest

./: README.md
Assets/avatar_r0_5/urdf/: avatar_r0_5.urdf  avatar_r0_5_unity.urdf  final.urdf
Assets/avatar_r0_5/urdf/Materials/: rgba-0.152941176470588-0.152941176470588-0.152941176470588-1.mat  rgba-0.627450980392157-0.627450980392157-0.627450980392157-1.mat  rgba-0.956862745098039-0.96078431372549-0.964705882352941-1.mat  rgba-0.96078-0.96078-0.96471-1.mat  rgba-0.96078431372549-0.96078431372549-0.964705882352941-1.mat  rgba-0.964705882352941-0.964705882352941-0.952941176470588-1.mat
Assets/avatar_r0_5/urdf/avatar_r0_5/: CMakeLists.txt  package.xml  urdf.rviz
Assets/avatar_r0_5/urdf/avatar_r0_5/config/: joint_names_avatar_r0_5.yaml
Assets/avatar_r0_5/urdf/avatar_r0_5/launch/: display.launch  gazebo.launch
Assets/avatar_r0_5/urdf/avatar_r0_5/test/: xacro_test.py
Assets/avatar_r0_5/urdf/avatar_r0_5/urdf/: avatar_r0_5.csv  avatar_r0_5.urdf.xacro
Assets/avatar_r0_5/urdf/meshes/: base_link.prefab  base_link_0.asset  base_link_1.asset  base_link_2.asset  base_link_3.asset  base_link_4.asset  base_link_5.asset  base_link_6.asset  base_link_7.asset  base_link_8.asset  base_link_9.asset  chest_link.STL  chest_link.prefab  chest_link_0.asset  head_link.STL  head_link.prefab  head_link_0.asset  head_link_1.asset  head_link_2.asset  head_link_3.asset  int_neck_link.STL  int_neck_link.prefab  int_neck_link_0.asset  l_interface_link.STL  l_interface_link.prefab  l_interface_link_0.asset  l_should_axis_link.STL  neck_link.STL  (+16 more)
ProjectSettings/: ProjectSettings.asset
(+179 files in other folders)
